<resources>
    <string name="app_name">Agenda</string>
    <string name="app_list_page_tittle">Lista de Alunos</string>
    <string name="app_form_page_create_tittle">Novo Aluno</string>
    <string name="app_form_page_edit_tittle">Editar Aluno</string>
    <string name="menu_remove_tittle">Remover</string>
    <string name="nome_label">Nome</string>
    <string name="sobrenome_label">Sobrenome</string>
    <string name="telefone_label">Telefone</string>
    <string name="ra_label">RA</string>
    <string name="email_label">E-mail</string>
    <string name="salvar_buttom_label">Salvar</string>
    <string name="remove_buttom_label_yes">Sim</string>
    <string name="remove_buttom_label_no">Não</string>
    <string name="remove_dialog_label_title">Removendo aluno</string>
    <string name="remove_dialog_label_message">Deseja realmente remover o aluno?</string>
</resources>