<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/activity_formulario_aluno_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_spacing"
        android:hint="@string/nome_label"
        android:inputType="textCapWords"
        ></EditText>

    <EditText
        android:id="@+id/activity_formulario_aluno_ra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_spacing"
        android:inputType="number"
        android:hint="@string/ra_label"></EditText>

    <EditText
        android:id="@+id/activity_formulario_aluno_telefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_spacing"
        android:inputType="number"
        android:hint="@string/telefone_label"></EditText>

    <EditText
        android:id="@+id/activity_formulario_aluno_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_spacing"
        android:inputType="textEmailAddress"
        android:hint="@string/email_label"></EditText>

    <Button
        android:id="@+id/activity_formulario_aluno_btn_salvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_spacing"
        android:layout_marginEnd="@dimen/normal_spacing"
        android:text="@string/salvar_buttom_label"></Button>

</LinearLayout>